--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="recipeinhand.com.sidemenu.sample">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".recipe.desert.gambasActivity"></activity>
+        <activity android:name=".recipe.food.dakdoriActivity"></activity>
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5382921366365796~5413196638" />
+
+        <activity android:name=".recipe.food.carbonaraActivity" />
+        <activity android:name=".recipe.food.alioolioActivity" />
+        <activity android:name=".recipe.desert.gambasActivity" />
         <activity android:name=".recipe.food.zeyukActivity" />
         <activity
             android:name=".SplashActivity"
