--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.+'
     // For control over item selection of both touch and mouse driven selection
 
+    implementation 'com.google.android.gms:play-services-ads:17.0.0'
 }
